--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
            * If you would like to do it, you need to remove the following commented code and
            * modify the webchat.setContextParam parameters to pass in the data you need.
            */
-           function setContext() {
+           /*function setContext() {
              webchat.setContextParam({ "var1": "value1", "var2": "value2", "var3": 100 })
            }
            // Send data when the chat conversation is initiated
@@ -145,7 +145,7 @@
            // Send data when the chat widget is open
            webchat.onOpenWebchat = function() {
              setContext()
-           }
+           }*/
         };
       })(
         window,
